server/compilers/goLiteJS/src/test/ml2/valid/dbz.go
// division by zero is runtime error
package main

func main() {
    _ = 1 / 0
}
