server/compilers/goLiteJS/src/test/ml2/invalid/binary20.go
// invalid <= types
package main

func main() {
    _ = true <= false
}
